// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Server.request_close() should request correctly 1`] = `
Array [
  "http://127.0.0.1:10086/close",
  Object {
    "qs": undefined,
  },
]
`;

exports[`Server.request_pid() should request correctly 1`] = `10086`;

exports[`Server.request_pid() should request correctly 2`] = `
Array [
  "http://127.0.0.1:10086/pid",
  Object {
    "qs": undefined,
  },
]
`;

exports[`Server.request_reset_mark() should request correctly 1`] = `
Array [
  "http://127.0.0.1:10086/reset",
  Object {
    "qs": undefined,
  },
]
`;

exports[`Server.request_reset_start() should request correctly 1`] = `
Array [
  "http://127.0.0.1:10086/reset",
  Object {
    "qs": Object {
      "filename": Array [
        "f1.ts",
        "f2.ts",
      ],
    },
  },
]
`;

exports[`Server.request_reset_start() should request correctly 2`] = `
Object {
  "1": "snapshot 1",
  "2": "snapshot 2",
  "3": "snapshot 3",
}
`;

exports[`Server.request_reset_start() should request correctly 3`] = `undefined`;

exports[`server Server#log() should log if debug = true 1`] = `"[dts-jest] message"`;

exports[`server events Server#init_event_close() should setup correctly 1`] = `"/close"`;

exports[`server events Server#init_event_pid() should setup correctly 1`] = `"/pid"`;

exports[`server events Server#init_event_snapshots() should call callback while reseting is false 1`] = `"/snapshots"`;

exports[`server events Server#init_event_snapshots() should push callback to callbacks while reseting is true 1`] = `"/snapshots"`;
